[package]
name = "asitop_in_rust"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "asitop_in_rust"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
libc = "0.2"
plist = { version = "1.6", features = ["serde"] }
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
core-foundation-sys = "0.8.7"
